<resources>
    <string name="app_name">Rastrear Comida</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="buscar_endereco">Buscar Endereço</string>
    <string name="login">Login</string>
    <string name="logar">Logar</string>
    <string name="esqueceu_senha"><u>Esqueceu sua senha?</u></string>
    <string name="nao_tem_login">Não tem LOGIN? Crie um agora!</string>

    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="repetir_senha">Repetir senha:</string>

    <string name="uf">UF</string>
    <string name="estado">Estado</string>
    <string name="logradouro">Logradouro</string>
    <string name="cep">CEP</string>
    <string name="numero">Nº</string>

</resources>
